# udemy

./: .gitignore
C++-Course/VSC/: CMakeLists.txt  Doxyfile  Makefile
C++-Course/VSC/cmake/: Docs.cmake
C++-Course/VSC/section01/: CMakeLists.txt
C++-Course/VSC/section01/Project00_01/src/: main.cpp
C++-Course/VSC/section01/Project00_02/: CMakeLists.txt  Makefile
C++-Course/VSC/section01/Project00_02/src/: CMakeLists.txt  main.cpp
C++-Course/VSC/section04/: CMakeLists.txt
C++-Course/VSC/section04/CodeChallenge/: CMakeLists.txt
C++-Course/VSC/section04/CodeChallenge/src/: CMakeLists.txt  main.cpp
C++-Course/VSC/section04/CompilerWarnings/: CMakeLists.txt  Makefile
C++-Course/VSC/section04/CompilerWarnings/src/: main.cpp
C++-Course/VSC/section04/FirstProgram/src/: main  main.cpp
C++-Course/VSC/section04/LinkerErrors/: Makefile
C++-Course/VSC/section04/LinkerErrors/src/: main.cpp
C++-Course/VSC/section04/RuntimeErrors/: Makefile
C++-Course/VSC/section04/RuntimeErrors/src/: main.cpp
C++-Course/VSC/section05/: CMakeLists.txt
C++-Course/VSC/section05/BasicIO/src/: main.cpp
C++-Course/VSC/section05/Comments/: Makefile
C++-Course/VSC/section05/Comments/src/: main.cpp
C++-Course/VSC/section05/ModifiedProgram/src/: main.cpp
C++-Course/VSC/section05/ProgrammingExercise01/src/: main.cpp
C++-Course/VSC/section06/: CMakeLists.txt
C++-Course/VSC/section06/CodeChallenge/src/: CMakeLists.txt  main.cpp
C++-Course/VSC/section06/Constants/src/: main.cpp
C++-Course/VSC/section06/GlobalVariables/src/: main.cpp
C++-Course/VSC/section06/InitializingVariables/src/: main.cpp
C++-Course/VSC/section06/PrimitiveTypes/src/: main.cpp
C++-Course/VSC/section06/ProgrammingExercise01/src/: main.cpp
C++-Course/VSC/section06/SizeofOperator/src/: main.cpp
C++-Course/VSC/section07/: CMakeLists.txt
C++-Course/VSC/section07/Arrays/: CMakeLists.txt
C++-Course/VSC/section07/Arrays/src/: main.cpp
C++-Course/VSC/section07/CodeChallenge/src/: main.cpp
C++-Course/VSC/section07/ProgrammingExercise01/src/: main.cpp
C++-Course/VSC/section07/ProgrammingExercise02/src/: main.cpp
C++-Course/VSC/section07/Vectors/src/: main.cpp
C++-Course/VSC/section08/: CMakeLists.txt
C++-Course/VSC/section08/ArithmeticOperators/src/: main.cpp
C++-Course/VSC/section08/AssignementOperator/src/: main.cpp
C++-Course/VSC/section08/CodeChallenge/src/: main.cpp
C++-Course/VSC/section08/EqualityOperators/src/: main.cpp
C++-Course/VSC/section08/Euros/src/: main.cpp
C++-Course/VSC/section08/IncrementDecrementOperators/src/: main.cpp
C++-Course/VSC/section08/LogicalOperators/src/: main.cpp
C++-Course/VSC/section08/MixedExpressions/src/: main.cpp
C++-Course/VSC/section08/ProgrammingExercise01/src/: main.cpp
C++-Course/VSC/section08/ProgrammingExercise02/src/: CMakeLists.txt  main.cpp
C++-Course/VSC/section08/RelationalOperators/src/: main.cpp
C++-Course/VSC/section09/: CMakeLists.txt
C++-Course/VSC/section09/CodeChallenge/src/: main.cpp
C++-Course/VSC/section09/ConditionalOperator/src/: main.cpp
C++-Course/VSC/section09/DoWhile/src/: main.cpp
C++-Course/VSC/section09/ForLoop/src/: main.cpp
C++-Course/VSC/section09/Grades/src/: main.cpp
C++-Course/VSC/section09/Histogram/src/: CMakeLists.txt  main.cpp
C++-Course/VSC/section09/IfElseStatement/src/: main.cpp
C++-Course/VSC/section09/IfStatement/src/: main.cpp
C++-Course/VSC/section09/MultiplicationTable/src/: main.cpp
C++-Course/VSC/section09/ProgrammingExercise01/src/: main.cpp
C++-Course/VSC/section09/ProgrammingExercise02/src/: main.cpp
C++-Course/VSC/section09/ProgrammingExercise03/src/: main.cpp
C++-Course/VSC/section09/ProgrammingExercise04/src/: main.cpp
C++-Course/VSC/section09/ProgrammingExercise05/src/: main.cpp
C++-Course/VSC/section09/ProgrammingExercise06/src/: main.cpp
C++-Course/VSC/section09/ProgrammingExercise07/src/: main.cpp
C++-Course/VSC/section09/ProgrammingExercise08/src/: main.cpp
C++-Course/VSC/section09/RangeBasedForLoop/src/: main.cpp
C++-Course/VSC/section09/Shipping/src/: main.cpp
C++-Course/VSC/section09/Switch/src/: main.cpp
C++-Course/VSC/section09/SwitchEnum/src/: main.cpp
C++-Course/VSC/section09/WhileLoop/src/: main.cpp
C++-Course/VSC/section0_priv/: CMakeLists.txt
C++-Course/VSC/section0_priv/HexToDec/include/: ConvertSystem.cpp  ConvertSystem.h
C++-Course/VSC/section0_priv/HexToDec/src/: main.cpp
C++-Course/VSC/section10/: CMakeLists.txt
C++-Course/VSC/section10/CStyleStrings/src/: main.cpp
C++-Course/VSC/section10/CodeChallenge/src/: main.cpp
C++-Course/VSC/section10/CppStrings/src/: main.cpp
C++-Course/VSC/section10/LetterPyramid/src/: main.cpp
C++-Course/VSC/section10/ProgrammingExercise01/src/: main.cpp
C++-Course/VSC/section10/ProgrammingExercise02/src/: main.cpp
C++-Course/VSC/section11/: CMakeLists.txt
C++-Course/VSC/section11/ArraysAndFunctions/src/: main.cpp
C++-Course/VSC/section11/CodeChallenge/src/: main.cpp
C++-Course/VSC/section12/: CMakeLists.txt
C++-Course/VSC/section13/: CMakeLists.txt
C++-Course/VSC/section13/ConstructorsAndDestructors/: Makefile
C++-Course/VSC/section13/ImplementingMethods2/: Makefile
C++-Course/VSC/section14/: CMakeLists.txt
C++-Course/VSC/section14/CodeChallengev1/: CMakeLists.txt
C++-Course/VSC/section15/: CMakeLists.txt
C++-Course/VSC/section16/: CMakeLists.txt
C++-Course/VSC/section17/: CMakeLists.txt
C++-Course/VSC/section18/: CMakeLists.txt
C++-Course/VSC/section19/: CMakeLists.txt
C++-Course/VSC/section19/CodeChallenge04/: Makefile
C++-Course/VSC/section19/ProgrammingExecise01/: Makefile
C++-Course/VSC/section20/: CMakeLists.txt
C++-Course/VSC/section20/CodeChallenge01/: Makefile
C++-Course/VSC/section20/CodeChallenge02/: Makefile
C++-Course/VSC/section20/FunctionTemplates/: Makefile
C++-Course/VSC/section20/Set/: Makefile
C++-Course/VSC/section21/: CMakeLists.txt
C++-Course/VSC/section23/: CMakeLists.txt
C++-Course/VSC/templates/: InSectionCMake.template  header.h.template  launch.json.template  main.cpp  main.cpp.template
(+363 files in other folders)
