# set(SECTION "section09")
get_filename_component(SECTION ${CMAKE_CURRENT_SOURCE_DIR} NAME)

set_property(GLOBAL APPEND PROPERTY CPACK_COMPONENTS_ALL ${SECTION})

add_subdirectory(IfElseStatement)
add_subdirectory(IfStatement)
add_subdirectory(Shipping)
add_subdirectory(ProgrammingExercise01)
add_subdirectory(ProgrammingExercise02)
add_subdirectory(Grades)

add_subdirectory(Switch)
add_subdirectory(SwitchEnum)
add_subdirectory(ProgrammingExercise03)
add_subdirectory(ConditionalOperator)
add_subdirectory(ForLoop)
add_subdirectory(ProgrammingExercise04)
add_subdirectory(RangeBasedForLoop)
add_subdirectory(ProgrammingExercise05)
add_subdirectory(WhileLoop)
add_subdirectory(ProgrammingExercise06)
add_subdirectory(DoWhile)
add_subdirectory(ProgrammingExercise07)
add_subdirectory(MultiplicationTable)
add_subdirectory(Histogram)
add_subdirectory(ProgrammingExercise08)
add_subdirectory(CodeChallenge)
