# set(SECTION "section09")
get_filename_component(SECTION ${CMAKE_CURRENT_SOURCE_DIR} NAME)
set(SECTION ${SECTION} PARENT_SCOPE)

set_property(GLOBAL APPEND PROPERTY CPACK_COMPONENTS_ALL ${SECTION})

add_subdirectory(Math)
add_subdirectory(Random)
add_subdirectory(ProgrammingExercise01)
add_subdirectory(FunctionDefinitions)
add_subdirectory(FunctionParameters)
add_subdirectory(ProgrammingExercise02)
add_subdirectory(DefaultArguments)
add_subdirectory(ProgrammingExercise03)
add_subdirectory(ProgrammingExercise04)
add_subdirectory(FunctionOverloading)
add_subdirectory(ArraysAndFunctions)
add_subdirectory(ProgrammingExercise05)
add_subdirectory(ProgrammingExercise06)
add_subdirectory(PassByReference)
add_subdirectory(ScopeExample)
add_subdirectory(HowFunctionCallsWork)
add_subdirectory(Fibonacci)
add_subdirectory(Factorial)
add_subdirectory(ProgrammingExercise07)
add_subdirectory(ProgrammingExercise08)
add_subdirectory(CodeChallenge)
